# sherloq

./: .dockerignore  .gitignore  Dockerfile  README.md  TODO.txt  pyproject.toml  run.py  setup.py
cli/: Makefile  (+5 more)
gui/: ExifTool.cpp  ExifTool.h  ExifToolPipe.cpp  ExifToolPipe.h  Sherloq.pro  TagInfo.cpp  TagInfo.h  __init__.py  __main__.py  adjust.py  adjustmentwidget.cpp  adjustmentwidget.h  clickableslider.cpp  clickableslider.h  cloning.py  colorpcawidget.cpp  colorpcawidget.h  comparison.py  comparisonwidget.cpp  comparisonwidget.h  contrast.py  contrastwidget.cpp  contrastwidget.h  copy_move.py  cvmatandqimage.cpp  cvmatandqimage.h  dct.py  digest.py  digestwidget.cpp  digestwidget.h  doublewidget.cpp  doublewidget.h  dynamicview.cpp  dynamicview.h  echo.py  echowidget.cpp  echowidget.h  editor.py  ela.py  elawidget.cpp  (+87 more)
gui/alglib/: alglibinternal.cpp  alglibinternal.h  alglibmisc.cpp  alglibmisc.h  ap.cpp  ap.h  dataanalysis.cpp  dataanalysis.h  diffequations.cpp  diffequations.h  fasttransforms.cpp  fasttransforms.h  integration.cpp  integration.h  interpolation.cpp  interpolation.h  linalg.cpp  linalg.h  optimization.cpp  optimization.h  solvers.cpp  solvers.h  specialfunctions.cpp  specialfunctions.h  statistics.cpp  statistics.h
gui/icons/: microscope.xcf
gui/models/: jpeg_qf.mdl  median_b64.json  median_b64.mdl
gui/noiseprint/: __init__.py  network.py  noiseprint.py  noiseprint_blind.py  post_em.py
gui/pyexiftool/: MANIFEST.in  README.rst  __init__.py  exiftool.py  setup.py
gui/sherloq_app/: __init__.py  __main__.py  help.py  main.py  paths.py
(+262 files in other folders)
